# executorch-rs

./: .gitignore  flake.nix
download_prebuilt/: .gitignore  Cargo.toml
download_prebuilt/src/: download_android.rs  download_apple.rs  lib.rs  main.rs  parser.rs
executorch/: Cargo.toml
executorch-prebuilt/: Cargo.toml
executorch-prebuilt/src/: lib.rs
executorch-sys/: Cargo.toml  build.rs
executorch-sys/cpp/executorch_rs/: backend_debug.cpp  c_bridge.cpp  register_coreml.mm
executorch/src/: platform.rs
executorch/tests/: platform.rs
